[gd_scene load_steps=10 format=3 uid="uid://saacahwf4c7x"]

[ext_resource type="Script" uid="uid://cshweurhswqxl" path="res://DieselPunk/scripts/game.gd" id="1_sugp2"]
[ext_resource type="TileSet" uid="uid://cfrfdq6p1s5eg" path="res://DieselPunk/tilesets/dungeon_tileset.tres" id="2_jyhfs"]
[ext_resource type="Script" uid="uid://d176sna23kj4q" path="res://DieselPunk/scripts/player.gd" id="3_tbgi4"]
[ext_resource type="Script" uid="uid://b6x2m3ig2s6wk" path="res://DieselPunk/scripts/map_diagnostic.gd" id="4_wkaj0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sugp2"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.5, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jyhfs"]
bg_color = Color(0.8, 0.3, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbgi4"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.5, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tefeu"]
bg_color = Color(0.15, 0.15, 0.15, 0.9)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.5, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6xl0"]
bg_color = Color(1, 0.8, 0.2, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8, 0.6, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="main" type="Node2D"]

[node name="Game" type="Node2D" parent="."]
script = ExtResource("1_sugp2")

[node name="MapDiagnostic" type="Node" parent="Game"]
script = ExtResource("4_wkaj0")

[node name="DungeonMap" type="TileMapLayer" parent="Game"]
tile_set = ExtResource("2_jyhfs")

[node name="Player" type="CharacterBody2D" parent="Game"]
script = ExtResource("3_tbgi4")

[node name="Sprite" type="Sprite2D" parent="Game/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Player"]

[node name="Camera" type="Camera2D" parent="Game/Player"]
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="Enemies" type="Node2D" parent="Game"]

[node name="UI" type="CanvasLayer" parent="Game"]

[node name="HealthBar" type="ProgressBar" parent="Game/UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 40.0
theme_override_styles/background = SubResource("StyleBoxFlat_sugp2")
theme_override_styles/fill = SubResource("StyleBoxFlat_jyhfs")

[node name="StatsLabel" type="Label" parent="Game/UI"]
offset_left = 10.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 14

[node name="MessageLog" type="RichTextLabel" parent="Game/UI"]
offset_left = 101.0
offset_top = 1156.0
offset_right = 891.0
offset_bottom = 1246.0
theme_override_colors/default_color = Color(0.9, 0.9, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_tbgi4")

[node name="InventoryPanel" type="Panel" parent="Game/UI"]
offset_left = 820.0
offset_top = 10.0
offset_right = 1140.0
offset_bottom = 480.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tefeu")

[node name="InventoryLabel" type="Label" parent="Game/UI/InventoryPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 460.0
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Inventory (E to use)"
autowrap_mode = 2

[node name="Minimap" type="SubViewportContainer" parent="Game/UI"]
offset_left = 820.0
offset_top = 490.0
offset_right = 1140.0
offset_bottom = 730.0

[node name="MinimapCanvas" type="ColorRect" parent="Game/UI"]
offset_left = 820.0
offset_top = 490.0
offset_right = 1140.0
offset_bottom = 730.0
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="ComboLabel" type="Label" parent="Game/UI"]
offset_left = 350.0
offset_top = 10.0
offset_right = 550.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="AchievementPopup" type="Panel" parent="Game/UI"]
offset_left = 300.0
offset_top = -100.0
offset_right = 700.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_o6xl0")

[node name="AchievementText" type="Label" parent="Game/UI/AchievementPopup"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 390.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0.2, 0.1, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
